Bug 3813 - lib/xtrans (GNU/kFreeBSD fixes)
Summary: lib/xtrans (GNU/kFreeBSD fixes)
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/xtrans (show other bugs)
Version: git
Hardware: x86 (IA32) other
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-19 06:43 UTC by Robert Millan
Modified: 2006-04-22 00:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Robert Millan 2005-07-19 06:43:35 UTC
This patch gets lib/xtrans to build on GNU/kFreeBSD.

Note:  on GNU/kFreeBSD, __GLIBC__ is a pre-processor macro.

Index: lib/xtrans/Xtranssock.c
===================================================================
RCS file: /cvs/xorg/xc/lib/xtrans/Xtranssock.c,v
retrieving revision 1.7
diff -u -r1.7 Xtranssock.c
--- lib/xtrans/Xtranssock.c     3 Jul 2005 07:01:01 -0000       1.7
+++ lib/xtrans/Xtranssock.c     18 Jul 2005 19:17:35 -0000
@@ -88,7 +88,7 @@
 #endif 
 
 #ifndef NO_TCP_H
-#if defined(__osf__) || defined(linux) || defined(AIXV5)
+#if defined(__osf__) || defined(linux) || defined(__GLIBC__) || defined(AIXV5)
 #include <sys/param.h>
 #endif /* osf */
 #if defined(__NetBSD__) || defined(__OpenBSD__) || defined(__FreeBSD__) ||
defined(__DragonFly__)
Comment 1 Alan Coopersmith 2005-10-03 10:46:15 UTC
Fix committed to CVS head:

CVSROOT:	/cvs/xorg
Module name:	xc
Changes by:	alanc@gabe.freedesktop.org	05/10/03 10:45:28

Log message:
  2005-10-03  Alan Coopersmith  <alan.coopersmith@sun.com>
  
  	* lib/xtrans/Xtranssock.c:
  	Bug #3813 <https://bugs.freedesktop.org/show_bug.cgi?id=3813>
  	GNU/kFreeBSD fix for xtrans (Robert Millan)

Modified files:
      ./:
        ChangeLog 
      xc/lib/xtrans/:
        Xtranssock.c 
  
  Revision      Changes    Path
  1.1378        +6 -0      xc/ChangeLog
  http://cvs.freedesktop.org/xorg/xc/ChangeLog
  1.10          +1 -1      xc/lib/xtrans/Xtranssock.c
  http://cvs.freedesktop.org/xorg/xc/lib/xtrans/Xtranssock.c


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.